--- a/view/css/about.css
+++ b/view/css/about.css
@@ -19,8 +19,8 @@ div.field {
 }
 #about-content h3.title {
 	margin: 0px;
-	padding: 13px 0 10px 30px;
-	background: white url('arrowH2-section.gif') scroll no-repeat  0 0;
+	padding: 16px 0 10px 30px;
+	background: white url('arrowH2-section.gif') no-repeat scroll -5px 0;
 	height:37px;
 	font-size: 20px;
     font-weight: bold;
@@ -28,18 +28,19 @@ div.field {
 #about-content div.about-page {
     background-color: white;
     margin-bottom: 20px;
-    margin-top: -20px;
-    padding: 10px 0px 1px;
+    margin-top: 0;
+    padding: 0 0px 1px;
+	line-height: 18px;
 }
 #about-content .post {
-	margin: 0px 30px 30px 30px;
+	margin: 0px 30px 10px;
 }
 #about-content .post h4 {
-    text-transform: none !important;
-	font-size: 20px;
-    font-weight: bold;
-    color: #808285;
-    margin: 10px 0px !important;
+    font: 20px "Helvetica Neue", Helvetica, Arial, Geneva, sans-serif;
+    margin: 0 0 5px 0;
+	text-transform:none;
+	color:#535353;
+	text-decoration:none;
 }
 #about-content .post .embed{
     width: 500px;
@@ -47,7 +48,7 @@ div.field {
 	margin: 10px 0px;
 }
 #about-content .post .embed-legend{
-	border-left: 2px solid #58595B;
+	border-left: 2px solid #c0c0c0;
 	color: #9B9B9D;
 	font-size: 0.9em;
 	width: 495px;
@@ -81,12 +82,11 @@ div.widget.about-sidebar-module {
     margin: 0 0 20px;
 }
 div.widget.about-sidebar-module .supertitle {
-    border-bottom: 1px solid #20b3b2;
-    font-weight: bold;
-    font-size: 16px;
-    margin: 0 0 3px;
-    padding: 6px;
-    color: #58595b;
+	  border-bottom: 1px solid #20b3b2;
+	color: #58595b;
+    font: normal 14px "Helvetica Neue", Helvetica, Arial, Geneva, sans-serif;
+    margin: 0 0 1em;
+    padding: 0 2px 0.5em;
 }
 div.widget.about-sidebar-module ul {
 	padding-left: 20px;
@@ -129,4 +129,176 @@ div.widget.contact-message .button {
     float: right;
     margin: 1em 0 0;
 }
+
+
 /* fin Cuadro de mensaje */
+
+/* estilos-estaticas */
+
+.estatic-blue-green {
+	color: #1fb3b2;
+}
+
+.estatic-txt0 {
+	width:430px; 
+	float: left; 
+	padding-right:16px; 
+	margin-top:16px; 
+	font-size: 13px; 
+	line-height:19px;
+}
+
+.estatic-txt0 a {
+	font-size: 13px;
+}
+
+.estatic-txt0 a:hover {
+	color: #1fb3b2;
+}
+
+.estatic-txt1 {
+	width:430px; 
+	float: right; 
+	padding-right:16px; 
+	margin-top:16px; 
+	font-size: 13px; 
+	line-height:19px;
+}
+
+.estatic-txt1 a {
+	font-size: 13px; 
+}
+
+.estatic-txt1 a:hover {
+	color: #1fb3b2; 
+}
+
+.estatic-txt2 {
+	margin-top:16px; 
+	font-size: 13px; 
+	line-height:19px;
+}
+
+.estatic-txt2 a {
+	font-size: 13px; 
+}
+
+.estatic-txt2 a:hover {
+	color: #1fb3b2; 
+}
+
+.box-round {
+	width:400px;
+	color: #f1edea;
+	background-color: #1fb3b2;
+	
+    -webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+	behavior:url(border-radius.htc);
+	-khtml-border-radius: 5px;
+    
+	font-size: 20px;
+	text-align: left;
+	padding: 13px;
+	line-height: 28px;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	clear: left;
+	float: left;
+}
+
+.box-round a {
+	color: #f1edea;
+	font-size: 20px;
+}
+
+.box-round a:hover {
+	color: white;
+}
+
+.box-round2 {
+	width:400px;
+	color: #f1edea;
+	background-color: #1fb3b2;
+	
+    -webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+	behavior:url(border-radius.htc);
+	-khtml-border-radius: 5px;
+    
+	font-size: 20px;
+	text-align: left;
+	padding: 13px;
+	line-height: 28px;
+	margin-bottom: 20px;
+}
+
+.box-round2 a {
+	color: #f1edea;
+	font-size: 20px;
+}
+
+.box-round2 a:hover {
+	color: white;
+}
+
+.footnote {
+	width:430px;
+	font-size:10px;
+	line-height:16px;
+	color:#999;
+	clear:both;
+}
+
+.footnote a:link {
+	font-size:10px;
+	color:#999;
+}
+
+.footnote a:hover {
+	color:#20b3b2;
+}
+
+.caja1-press {
+	width: 545px; 
+	float: left; 
+	padding-right: 10px; 
+	margin-top:16px; 
+	font-size: 13px; 
+	line-height:19px;
+	border-right: 1px solid #b0b2b7;
+}
+
+.caja1-press a {
+	font-size: 13px;
+}
+
+.caja1-press a:hover {
+	color: #1fb3b2;
+}
+
+.caja2-press {
+	width:305px; 
+	float: right; 
+	padding-right:16px; 
+	margin-top:16px; 
+	font-size: 11px; 
+	line-height: 17px;
+}
+
+.caja2-press a {
+	font-size: 11px; 
+}
+
+.caja2-press a:hover {
+	color: #1fb3b2; 
+}
+
+.destacado { 
+	color:#20B3B2;
+	font-size:16px; 
+	line-height:21px;
+}
+
