--- a/view/css/common.css
+++ b/view/css/common.css
@@ -328,5 +328,12 @@ div.widget.blog-comment div#bocadillo{background:url('/view/css/bocadillo.jpg') 
 
 /* = enlace para volver arriba
 *******************************/
-a.up{display:inline-block;padding-left:15px;margin-left:18px; background:url('/view/css/arrow-up3.png') no-repeat left; line-height:20px;}
-a.up:hover{background:url('/view/css/arrow-up.png') no-repeat left;}
+a.up{display:inline-block;padding-left:15px;margin-left:18px; background:url('/view/css/arrow-up3.png') no-repeat left; line-height: 20px;
+	font-size: 10px;
+	text-decoration: none;
+	color: #9f9f9f;
+	margin-bottom: 40px;
+}
+a.up:hover{background:url('/view/css/arrow-up.png') no-repeat left;
+	color: #20b3b2;
+}
