--- a/view/css/goteo.css
+++ b/view/css/goteo.css
@@ -1,5 +1,3 @@
-
-
 @import url('common.css');
 @import url('header.css');
 @import url('footer.css');
@@ -48,7 +46,7 @@ div#main {
  
 div.widget {
     background-color: white;
-    padding: 20px;
+    padding: 15px 20px 10px;
     overflow: hidden;    
 }
 
@@ -66,9 +64,9 @@ div.widget .title{
     font-size: 16px;
     font-weight: bold;
     padding: 0 0 0 20px;
-    margin: 0 0 .5em -20px;
+    margin: 0 0 .8em -20px;
     text-decoration: none;
-	background:url("arrowH2-section.gif") left -16px no-repeat;
+	background: url("arrowH2-section.gif") no-repeat -5px -16px;
 }
 
 
@@ -108,7 +106,7 @@ div.read_more {
 div.read_more a {
     text-decoration: none;
     text-transform: uppercase;
-	font-size: 12px;
+	font-size: 11px;
 }
 div.read_more a:hover {
     color: #20B3B2;
