--- a/view/css/project/view.css
+++ b/view/css/project/view.css
@@ -1,4 +1,3 @@
-
 @import url('widget/summary.css');
 @import url('widget/media.css');
 @import url('widget/share.css');
@@ -77,7 +76,7 @@ body.project-show div#sub-header div.categories {
 	position: absolute;
     right: 10px;
     text-align: right;
-	max-width:240px;
+	max-width:300px;
 	top: 0;
 }
 
@@ -213,7 +212,7 @@ div.widget.project-spread div.subtitle{width:245px;text-transform:uppercase;marg
 /* = envía mensaje al autor - widget embed code
 **************************************************/
 div.widget.projects #widget-code{	width:350px;	float:left; margin: 0 0 0 20px;}
-div.widget.projects  #widget-code .wc-embed{background: url("/view/css/social/embed.png") no-repeat;	height:20px;text-transform:uppercase;padding: 3px 0 0 25px;}
+div.widget.projects  #widget-code .wc-embed{background: url("/view/css/social/embed.png") no-repeat; min-height:20px;text-transform:uppercase;padding: 3px 0 0 25px;}
 div.widget.projects  #widget-code textarea{width:200px;	margin: 10px 0;	padding:10px;	background:#E7E7E7;border:none;font-size:11px;resize:none;}
 
 
