--- a/view/css/project/widget/rewards.css
+++ b/view/css/project/widget/rewards.css
@@ -338,6 +338,12 @@ div.widget.project-rewards ul li div.license.gpl > a strong,
     background-image: url('/view/css/license/gpl.png');
 }
 
+div.widget.project-invest ul li div.license.gpl2 > a strong,
+div.widget.project-rewards ul li div.license.gpl2 > a strong,
+#rewards-summary ul li div.license.gpl2 > a strong {
+    background-image: url('/view/css/license/gpl2.png');
+}
+
 div.widget.project-invest ul li div.license.lgpl > a strong,
 div.widget.project-rewards ul li div.license.lgpl > a strong,
 #rewards-summary ul li div.license.lgpl > a strong {
