--- a/view/css/project/widget/supporters.css
+++ b/view/css/project/widget/supporters.css
@@ -76,7 +76,7 @@ div.widget.project-supporters .supporters > ul > li {
 
 div.widget.project-supporters .supporters > ul > li div.supporterContainer {
 	padding: 10px 10px 10px 70px;
-	min-width: 220px;
+	width: 220px;
 }
 
 div.widget.project-supporters .supporters ul li.active {
@@ -114,7 +114,7 @@ div.widget.project-supporters .supporters ul li h6 {
     font-size: 11px;
     font-weight: bold;
     margin: 0 0 .5em;
-    height: 1em;
+    height: 13px;
     text-transform: none;
 }
 
@@ -142,10 +142,13 @@ div.widget.project-supporters .supporters ul li h6 a {
     display: block;
 }
 
+div.widget.project-supporters .supporters ul li h4 {
+    overflow: hidden;
+}
+
 div.widget.project-supporters .supporters ul li a:hover {
     color: #20B3B2;
 }
-
 
 div.widget.project-supporters .supporters ul li dl,
 div.widget.project-supporters .supporters ul li dl dt,
@@ -333,7 +336,7 @@ div.widget.project-investors .investors ul li h5,
 div.widget.project-investors .investors ul li h6 {
 	font-size: 11px !important;
     margin: 0 0 .5em;
-    height: 1em;
+    height: 13px;
 }
 
 div.widget.project-investors .investors ul li.active h3,
@@ -358,6 +361,11 @@ div.widget.project-investors .investors ul li h6 a {
     padding: 10px 10px 10px 60px;
     z-index: 9999;
     display: block;
+}
+
+div.widget.project-investors .investors ul li h4 {
+    text-transform: none !important;
+    overflow: hidden;
 }
 
 div.widget.project-investors .investors ul li a:hover {
