--- a/view/css/user/login.css
+++ b/view/css/user/login.css
@@ -1,5 +1,5 @@
-body.user-login div#main > div {    
-    display: table-cell;    
+body.user-login div#main > div {
+    display: table-cell;
 }
 
 body.user-login div#main > div > * {
@@ -10,7 +10,7 @@ body.user-login div#main > div > * {
 body.user-login div#main > div h2 {
     margin: 0 0 2em;
     font-size: 16px;
-    font-weight: bold;    
+    font-weight: bold;
 }
 
 
@@ -58,3 +58,89 @@ body.user-login div#main div.register label.conditions {
 body.user-login div#main div.register label.conditions a:hover {
     color: #20B3B2;
 }
+
+body.user-login .sign-in-with {
+	list-style: none;
+	margin: 0px 0px 0px 20px;
+	padding: 0 0 10px 0;
+}
+
+.sign-in-with li{
+	margin: 10px 0;
+    display:block;
+}
+
+.sign-in-with > li a {
+    padding: 3px 22px;
+    text-decoration: none;
+    background: transparent no-repeat 0px 0px;
+    line-height: 22px;
+    font-size: 16px;
+}
+
+.sign-in-with > li a:hover {
+	opacity:0.7;
+	filter:alpha(opacity=70)
+}
+.sign-in-with li.more {
+	margin:0;
+	padding:0;
+	color:#555;
+}
+.sign-in-with li.more a {
+	margin:0;
+	padding:0;
+	font-size: 12px;
+	color:#555;
+	text-decoration:underline;
+}
+.sign-in-with li.facebook a {
+    color: #4e6091;
+    background-image: url('/view/css/facebook.png');
+}
+
+.sign-in-with li.twitter a {
+    color: #6dc7eb;
+    background-image: url('/view/css/twitter.png');
+}
+
+.sign-in-with li.linkedin a {
+    color: #4195BA;
+    background-image: url('/view/css/linkedin.png');
+}
+.sign-in-with li.google a {
+	background-image: url('/view/css/openid-google.png');
+}
+.sign-in-with li.yahoo a {
+	background-image: url('/view/css/openid-yahoo.png');
+}
+.sign-in-with li.myopenid a {
+	background-image: url('/view/css/openid-myopenid.png');
+}
+.sign-in-with li.openid input {
+	color: #999;
+	padding-left:24px;
+	padding-right:0px;
+	background: url('/view/css/openid-openid.png') no-repeat 4px 3px;
+}
+.sign-in-with li.openid input.focus,.sign-in-with li.openid input.used {
+	color:#666;
+}
+.sign-in-with > li.openid a {
+    background-color: #58595B;
+    padding: 1px 6px;
+    text-transform: capitalize;
+    border: none;
+    cursor: pointer;
+    font-weight: normal;
+    margin: 1px 0 1px 6px;
+    color: white;
+    display: inline-block;
+    text-decoration: none;
+    text-align: center;
+    border-radius: 3px;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    background: #aaa;
+}
+
