--- a/view/css/footer.css
+++ b/view/css/footer.css
@@ -134,19 +134,19 @@ div#slides_sponsor .slidersponsors-ctrl .prev {
 }
 
 div#slides_sponsor .slidersponsors-ctrl .prev {
-	background: url('small_arrowslider-sprt.png') scroll no-repeat 0 0;
+	background: url('/view/css/small_arrowslider-sprt.png') scroll no-repeat 0 0;
 }
 
 div#slides_sponsor .slidersponsors-ctrl .prev:hover {
-	background: url('small_arrowslider-sprt.png') scroll no-repeat 0 -32px;
+	background: url('/view/css/small_arrowslider-sprt.png') scroll no-repeat 0 -32px;
 }
 
 div#slides_sponsor .slidersponsors-ctrl .next{
-	background: url('small_arrowslider-sprt.png') scroll no-repeat 0 -16px;
+	background: url('/view/css/small_arrowslider-sprt.png') scroll no-repeat 0 -16px;
 }
 
 div#slides_sponsor .slidersponsors-ctrl .next:hover {
-	background: url('small_arrowslider-sprt.png') scroll no-repeat 0 -48px;
+	background: url('/view/css/small_arrowslider-sprt.png') scroll no-repeat 0 -48px;
 }
 
 div#footer div.block ul li{
@@ -207,27 +207,27 @@ div#footer div.social li a:hover{
 
 div#footer div.social li.twitter a {
     color: #6dc7eb;
-    background-image: url('twitter.png');
+    background-image: url('/view/css/twitter.png');
 }
 
 div#footer div.social li.facebook a {
     color: #4e6091;
-    background-image: url('facebook.png');
+    background-image: url('/view/css/facebook.png');
 }
 
 div#footer div.social li.identica a {
     color: #c42f31;
-    background-image: url('identica.png');
+    background-image: url('/view/css/identica.png');
 }
 
 div#footer div.social li.gplus a {
     color: #5075aa;
-    background-image: url('google.png');
+    background-image: url('/view/css/google.png');
 }
 
 div#footer div.social li.rss a {
     color: #ee8226;
-    background-image: url('rss.png');
+    background-image: url('/view/css/rss.png');
 }
 
 
