--- a/view/css/project/widget/project.css
+++ b/view/css/project/widget/project.css
@@ -239,6 +239,68 @@ div.widget.project div.meter div.graph {
     position: relative;   
 }
 
+/* Toda la movida para lo del obtenido */
+div.widget.project div.meter.activable {
+    z-index: 999
+}
+div.widget.project div.meter.activable.active {
+    background-color: #EBEAEB;
+}
+div.widget.project div.meter div.obtained {
+    display: none;
+    position: relative;
+    top: -10px;
+    right: -25px;
+}
+div.widget.project div.meter h3.title.obtained {
+    padding-left: 5px;
+}
+div.widget.project div.meter div.obtained strong {
+    font-size: 26px;
+    font-weight: bold;
+    color: #96238F;
+    padding-right: 20px;
+    border-right: 1px solid #a7a9ac;
+}
+div.widget.project div.meter div.obtained span.euro {
+    width: 19px;
+    height: 19px;
+    line-height: 2000px;
+    overflow: hidden;
+    display: inline-block;
+    background:  url('/view/css/euro/violet/m.png') no-repeat center;
+    margin-bottom: -1px;
+}
+div.widget.project div.meter div.obtained span.percent {
+    font-size: 26px;
+    font-weight: bold;
+    color: #a7a9ac;
+    padding-left: 15px;
+}
+div.widget.project div.meter h3.title.obtained,
+div.widget.project div.meter.active dl > dd,
+div.widget.project div.meter.active dl > dt {
+    display:none;
+}
+div.widget.project div.meter.active h3.title.investment,
+div.widget.project div.meter.active h3.title.ronda,
+div.widget.project div.meter.active div.graph > div {
+    display:none;
+}
+div.widget.project div.meter.active div.graph {
+    background: none !important;
+    border: none !important;
+}
+div.widget.project div.meter.active h3.title.obtained, 
+div.widget.project div.meter.active div.obtained {
+    display: block !important;
+}
+div.widget.project div.meter.active dl .days {
+    display: block !important;
+    background-color: #f8f8f8 !important;
+}
+/* Hasta aquí la movida de lo obtenido */
+
 div.widget.project div.meter div.graph  * strong,
 div.widget.project div.meter div.graph  * span {
     display: none;
