--- a/view/css/superform.css
+++ b/view/css/superform.css
@@ -570,9 +570,7 @@ div.superform li.editcost li.required_cost-no {
     background-color: #e2e2e2 !important;
 }
 
-/* Imágenes gallery (y en el de convocatoria: logo, imagen) */
-div.superform li#logo div.elements li.call-image,
-div.superform li#image div.elements li.call-image,
+/* Imágenes gallery */
 div.superform li#gallery div.elements li.gallery-image {
     margin: 5px 25px !important;
     display: inline-block !important;
